fixed sponsor page img alignment and fixed active button click color for selected btns

--- a/react-ystemandchess/src/features/engine/PlayComputer.module.scss
+++ b/react-ystemandchess/src/features/engine/PlayComputer.module.scss
@@ -151,7 +151,6 @@
     }
 
     &.active {
-      color: white;
       border-color: #2563eb;
       box-shadow: 0 4px 16px rgba(58, 124, 202, 0.4);
       transform: scale(1.05);
